2014-10-24  Camille Scott  <camille.scott.w@gmail.com>

    * do-partition.py: Add type=int to n_threads arg and assert to check
    number of active threads

2014-10-06  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Doxyfile.in: add links to the stdc++ docs

2014-10-01  Ben Taylor  <taylo886@msu.edu>

    * khmer/_khmermodule.cc, lib/hashtable.cc, lib/hashtable.hh,
    tests/test_counting_hash.py, tests/test_labelhash.py,
    tests/test_hashbits.py, tests/test_hashbits_obj.py:
    Removed Hashtable::consume_high_abund_kmers,
    Hashtable::count_kmers_within_depth, Hashtable::find_radius_for_volume,
    Hashtable::count_kmers_on_radius

2014-09-29  Michael R. Crusoe  <mcrusoe@msu.edu>

    * versioneer.py: upgrade versioneer 0.11->0.12

2014-09-29  Sherine Awad  <sherine.awad@gmail.com>

    * scripts/normalize-by-median.py: catch expections generated by wrong
    indentation for 'total'

2014-09-23  Jacob G. Fenton  <bocajnotnef@gmail.com>

    * scripts/{abundance-dist-single, abundance-dist, count-median,
    count-overlap, extract-paired-reads, filter-abund-single,
    load-graph, load-into-counting, make-initial-stoptags,
    partition-graph, split-paired-reads}.py: 
    added output file listing at end of file
    * scripts/extract-long-sequences.py: refactored to set write_out to
    sys.stdout by default; added output location listing.
    * scripts/{fastq-to-fasta, interleave-reads}.py: 
    added output file listing sensitive to optional -o argument
    * tests/test_scripts.py: added test for scripts/make-initial-stoptags.py

2014-09-19  Ben Taylor  <taylo886@msu.edu>

    * Makefile: added --inline-suppr to cppcheck, cppcheck-result.xml targets
    * khmer/_khmermodule.cc: Added comments to address cppcheck false positives
    * lib/hashtable.cc, lib/hashtable.hh: take args to filter_if_present by
    reference, address scope in destructor
    * lib/read_parsers.cc: Added comments to address cppcheck false positives