@@ -18,8 +18,7 @@ import sys
 
 import khmer
 from khmer.khmer_args import build_hashbits_args
-from khmer.khmer_args import (report_on_config, info)
-from khmer.threading_args import add_threading_args
+from khmer.khmer_args import (report_on_config, info, add_threading_args)
 from khmer.file import check_file_status, check_space
 from khmer.file import check_space_for_hashtable
 
@@ -65,7 +64,7 @@ def main():
         print 'We WILL build the tagset (for partitioning/traversal).'
 
     config = khmer.get_config()
-    config.set_reads_input_buffer_size(args.n_threads * 64 * 1024)
+    config.set_reads_input_buffer_size(args.threads * 64 * 1024)
 
     print 'making k-mer presence table'
     htable = khmer.new_hashbits(args.ksize, args.min_tablesize, args.n_tables)
